--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
       <version>2.4.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
